[UPSTREAM SYNC] Wednesday Oct 01, 2025 (#35)